--- a/index.html
+++ b/index.html
@@ -2,123 +2,147 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="description" content="Privacy Policy for StoreHouse Demo" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Privacy Policy - StoreHouse Demo</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <meta name="description"
+        content="Privacy Policy for StoreHouse Demo – warehouse & sales management application" />
+  <title>Privacy Policy | StoreHouse Demo</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-  <header>
-    <h1>Privacy Policy</h1>
-    <p class="subtitle">Effective Date: 2025-04-15</p>
-  </header>
+<header>
+  <h1>Privacy Policy</h1>
+  <p class="subtitle">Effective Date: 15 April 2025 · Last Updated: 15 April 2025</p>
+</header>
 
-  <main>
-    <section class="policy-section">
-      <h2>1. Introduction</h2>
-      <p>
-        Welcome to the <strong>StoreHouse Demo</strong> application 
-        (“<strong>App</strong>”, “<strong>we</strong>”, “<strong>us</strong>”, or 
-        “<strong>our</strong>”). We value your privacy and strive to protect your
-        personal data. This Privacy Policy explains how we collect, use, and 
-        disclose your information when you use our App.
-      </p>
-    </section>
-
-    <section class="policy-section">
-      <h2>2. Information We Collect</h2>
-      <p>
-        <strong>Routine Information.</strong> Our App may collect information such as 
-        IP addresses, device details, timestamps, and referring pages for 
-        routine administration and maintenance. None of this information 
-        personally identifies you.
-      </p>
-      <p>
-        <strong>Cookies.</strong> Our App may use cookies to store information 
-        about user preferences in order to provide a personalized experience. 
-        You can disable cookies in your browser settings, but this may affect 
-        some functionality of the App.
-      </p>
-    </section>
-
-    <section class="policy-section">
-      <h2>3. Third-Party Services</h2>
-      <p>
-        We may use third-party advertising partners or analytics providers that 
-        employ cookies, scripts, or web beacons to track user activities. This 
-        tracking is done by third parties through their own servers and is 
-        subject to their individual privacy policies. We have no direct control 
-        over how they collect or use your data.
-      </p>
-      <p>
-        For instance, Google may use cookies to serve ads based on a user’s 
-        prior visits. You can learn more on how to opt out of Google’s cookie 
-        usage by visiting 
-        <a href="http://www.google.com/privacy_ads.html" target="_blank" rel="noopener noreferrer">this page</a>.
-      </p>
-    </section>
-
-    <section class="policy-section">
-      <h2>4. Links to External Websites</h2>
-      <p>
-        Our App may include links to external websites for your convenience. We 
-        are not responsible for the content or the privacy practices employed 
-        by those websites. We encourage you to review the privacy policies of 
-        any third-party sites you visit.
-      </p>
-    </section>
-
-    <section class="policy-section">
-      <h2>5. Data Security</h2>
-      <p>
-        The security of your personal information is important to us. We use 
-        commercially acceptable means to protect your data. However, please 
-        note that no method of transmission over the Internet or method of 
-        electronic storage is 100% secure, and we cannot guarantee its 
-        absolute security.
-      </p>
-    </section>
-
-    <section class="policy-section">
-      <h2>6. Children’s Privacy</h2>
-      <p>
-        Our App is not directed to individuals under the age of 13. We do not 
-        knowingly collect personal information from children. If you believe 
-        that a child under 13 has provided us with personal information, 
-        please contact us so that we can remove it.
-      </p>
-    </section>
-
-    <section class="policy-section">
-      <h2>7. Changes to This Privacy Policy</h2>
-      <p>
-        We may update this Privacy Policy from time to time. The new policy 
-        will be posted here with an updated “Effective Date.” Your continued 
-        use of the App after any modifications indicates your acknowledgement 
-        and consent to be bound by the updated policy.
-      </p>
-    </section>
-
-    <section class="policy-section">
-      <h2>8. Contact Us</h2>
-      <p>
-        If you have any questions or concerns regarding this Privacy Policy, 
-        please contact us at:
-      </p>
-      <ul>
-        <li>Email: <a href="mailto:atomblue7@gmail.com">atomblue7@gmail.com</a></li>
-      </ul>
-      <p>
-        We will do our best to respond to your inquiry in a timely manner.
-      </p>
-    </section>
-
-  </main>
-
-  <footer>
-    <p class="footer-text">
-      &copy; 2025 StoreHouse Demo. All rights reserved.
+<main>
+  <!-- 1 -->
+  <section class="policy-section">
+    <h2>1. Who We Are</h2>
+    <p>
+      <strong>StoreHouse Demo</strong> (<em>“App”</em>, <em>“we”</em>, <em>“us”</em>)
+      is a publicly available <em>demonstration</em> of the commercial
+      <strong>StoreHouse Platform</strong>.
+      The demo is strictly <em>read‑only</em> and shows sample data only.
+      Companies that license the full version (“<em>Customers</em>”) receive their
+      own private database instance hosted on Google Firebase.
     </p>
-  </footer>
+  </section>
+
+  <!-- 2 -->
+  <section class="policy-section">
+    <h2>2. What Data We Collect</h2>
+    <h3>2.1 Demo version on Google Play</h3>
+    <p>
+      The demo does <strong>not</strong> collect, store, or transmit any personal
+      data from end‑users. No analytics, crash reports, cookies, or device
+      identifiers are recorded. All products, clients, and invoices visible
+      in the demo are fictional and pre‑loaded by AtomBlue7.
+    </p>
+
+    <h3>2.2 Enterprise version (for Customers)</h3>
+    <p>
+      When a Customer deploys the full system, they may store business data
+      such as employee details, product catalogues, and client invoices.
+      AtomBlue7 acts solely as a processor of that data on behalf of the Customer.
+    </p>
+  </section>
+
+  <!-- 3 -->
+  <section class="policy-section">
+    <h2>3. How Enterprise Data Is Used</h2>
+    <ul>
+      <li>Authenticating managers and marketers</li>
+      <li>Displaying warehouse inventory and generating PDF invoices</li>
+      <li>Maintaining the service and performing back‑ups</li>
+    </ul>
+    <p>No Enterprise data is shared with third‑party advertisers or analytics providers.</p>
+  </section>
+
+  <!-- 4 -->
+  <section class="policy-section">
+    <h2>4. Sharing & Disclosure</h2>
+    <p>We never sell personal data. Enterprise data is accessible only to:</p>
+    <ul>
+      <li>The Customer’s authorised managers inside their dashboard</li>
+      <li>AtomBlue7 engineers <em>solely</em> for support or maintenance, under
+          strict confidentiality agreements</li>
+      <li>Law‑enforcement agencies <em>only</em> when legally obliged</li>
+    </ul>
+  </section>
+
+  <!-- 5 -->
+  <section class="policy-section">
+    <h2>5. Security Measures</h2>
+    <ul>
+      <li><strong>Encryption in transit & at rest:</strong> TLS 1.2+ for all traffic;
+          AES‑256 for stored files and databases</li>
+      <li><strong>Least‑privilege access controls</strong> enforced via Firebase
+          security rules and IAM policies</li>
+      <li><strong>Multi‑factor authentication</strong> required for AtomBlue7 staff</li>
+      <li><strong>Regular penetration testing</strong> and dependency‑vulnerability scans</li>
+      <li><strong>Daily encrypted back‑ups</strong> with 30‑day retention in a separate region</li>
+    </ul>
+  </section>
+
+  <!-- 6 -->
+  <section class="policy-section">
+    <h2>6. Data Retention &amp; Deletion</h2>
+    <ul>
+      <li><strong>Demo:</strong> no personal data retained.</li>
+      <li><strong>Enterprise:</strong> data is stored for the lifetime of the
+          Customer contract. Upon termination, AtomBlue7 deletes all copies
+          within 30 days unless legal obligations require longer retention.</li>
+    </ul>
+    <p>
+      End‑users who wish to access or erase data held by a Customer should
+      contact that Customer directly. AtomBlue7 will assist the Customer in
+      fulfilling any deletion requests within 30 days.
+    </p>
+  </section>
+
+  <!-- 7 -->
+  <section class="policy-section">
+    <h2>7. Children’s Privacy</h2>
+    <p>
+      StoreHouse is intended for business use and is <strong>not</strong> directed
+      at children under 13. We do not knowingly collect data from minors.
+    </p>
+  </section>
+
+  <!-- 8 -->
+  <section class="policy-section">
+    <h2>8. International Transfers</h2>
+    <p>
+      Enterprise data is stored on Google Cloud servers, which may be located
+      outside your country. Data transfers are protected by Standard
+      Contractual Clauses or equivalent safeguards.
+    </p>
+  </section>
+
+  <!-- 9 -->
+  <section class="policy-section">
+    <h2>9. Changes to This Policy</h2>
+    <p>
+      We may update this Privacy Policy periodically. When we do, the “Last Updated”
+      date will change. Continued use of the App constitutes acceptance
+      of the revised policy.
+    </p>
+  </section>
+
+  <!-- 10 -->
+  <section class="policy-section">
+    <h2>10. Contact Us</h2>
+    <p>For questions or requests please contact:</p>
+    <ul>
+      <li>E‑mail: <a href="mailto:atomblue7@gmail.com">atomblue7@gmail.com</a></li>
+      <li>Address: AtomBlue7, Cairo – Egypt</li>
+    </ul>
+  </section>
+</main>
+
+<footer>
+  <p class="footer-text">© 2025 AtomBlue7 / StoreHouse. All rights reserved.</p>
+</footer>
 </body>
 </html>
